[package]
name = "bbpipelinewait"
version = "1.0.9"
description = "Tool to list running bitbucket pipelines and wait for them to stop."
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["cargo", "env"] }
reqwest = { version = "0.12.5", features = ["blocking", "json", "native-tls-vendored"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
directories = "5.0.1"
base64 = "0.22.1"
strum_macros = "0.26.3"
strum = "0.26.3"
log = "0.4.22"
url = "2.5.2"
spinner = "0.5.0"
termsize = "0.1.9"
