[package]
name = "bbpipelinewait"
authors = ["Scott Jackson <me@scottmmjackson.com>"]
version = "1.0.10"
description = "Tool to list running bitbucket pipelines and wait for them to stop."
edition = "2024"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5.13", features = ["cargo", "env"] }
reqwest = { version = "0.12.5", features = ["blocking", "json", "native-tls-vendored"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
directories = "6.0.0"
base64 = "0.22.1"
strum_macros = "0.27.1"
strum = "0.27.1"
spinner = "0.5.0"
termsize = "0.1.9"
