[package]
name = "bbpipelinewait"
authors = ["Scott Jackson <me@scottmmjackson.com>"]
version = "1.0.10"
description = "Tool to list running bitbucket pipelines and wait for them to stop."
edition = "2024"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.41", features = ["cargo", "env"] }
reqwest = { version = "0.12.22", features = ["json", "native-tls-vendored"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
directories = "6.0.0"
base64 = "0.22.1"
strum_macros = "0.27.1"
strum = "0.27.1"
log = "0.4.27"
url = "2.5.4"
spinner = "0.5.0"
termsize = "0.1.9"
